--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -12,12 +12,110 @@
     {% dnd_section %}
       {% dnd_column %}
         {% dnd_row %}
+            {% dnd_module path="@hubspot/rich_text", label="Rich text" %}
+                {% module_attribute "html" %}
+                <div style="text-align: center;">
+                    <h1>Pricing</h1>
+                    <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                </div>
+                {% end_module_attribute %}
+            {% end_dnd_module %}
+        {% end_dnd_row %}
+        {% dnd_row %}
             {% dnd_module path="../modules/Pricing Table",
                 label="Pricing Table"
             %}
             {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
+    {% end_dnd_section %}
+
+    {# Call To Action Section #}
+      {% dnd_section
+        background_color={
+          r: 52,
+          g: 181,
+          b: 229,
+          a: 1.0
+        }
+      %}
+        {% dnd_column
+          offset=0,
+          width=6
+        %}
+          {% dnd_row %}
+            {% dnd_module path="@hubspot/linked_image",
+              label="Image",
+              img={
+                "src": get_asset_url("../images/computer.png"),
+                "alt": "Computer and phone",
+                "size_type": "auto"
+              }    
+            %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+        {% dnd_column 
+          offset=6,
+          width=6
+        %}
+          {% dnd_row %}
+            {% dnd_module path="@hubspot/rich_text", label="Rich Text" %}
+              {% module_attribute "html" %}
+                <div>
+                  <h2 style="color: #fff;">Full Control</h2>
+                  <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                  <ul style="color: #fff;">
+                    <li>Someting awesome here</li>
+                    <li>Someting awesome here</li>
+                    <li>Someting awesome here</li>
+                  </ul>
+                </div>
+              {% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+          {% dnd_row %}
+            {% dnd_module 
+              path="../modules/Customizable button",
+              flexbox_positioning="MIDDLE_LEFT",
+              label="Button",
+              link="#",
+              button_text="Free Trial"
+            %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+      {% end_dnd_section %}
+
+    {# Frequently Asked Questions Section #}
+    {% dnd_section %}
+        {% dnd_column %}
+          {% dnd_row %}
+              {% dnd_module path="@hubspot/rich_text", label="Rich text" %}
+                  {% module_attribute "html" %}
+                  <div style="text-align: center;">
+                      <h2>Frequently Asked Questions</h2>
+                      <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                  </div>
+                  {% end_module_attribute %}
+              {% end_dnd_module %}
+          {% end_dnd_row %}
+          {% dnd_row %}
+            {% dnd_module path="../modules/Accordion",
+                label="Accordion",
+                width=6,
+                offset=0
+            %}
+            {% end_dnd_module %}
+            {% dnd_module path="../modules/Accordion",
+                label="Accordion",
+                width=6,
+                offset=6
+            %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+
     {% end_dnd_section %}
 
 
