--- a/src/modules/Feature.module/module.css
+++ b/src/modules/Feature.module/module.css
@@ -3,7 +3,7 @@
     text-align: center; 
 }
 
-.feature .icon > span {
+.feature__icon > span {
     border-radius: 100%; 
     border-width: 1px;
     border-style: solid;
@@ -13,7 +13,7 @@
     width: 100px; 
 }
 
-.feature .icon svg {
+.feature__icon svg {
     box-sizing: border-box; 
     height: 100px;
     padding: 20px; 
