--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="blog-post__comments">
-          <a class="blog-comments__toggle hs-button">View Comments</a>
+          <a class="blog-comments__toggle button button__primary">View Comments</a>
           <div class="blog-comments__listing">
               {% module "blog_comments" path="@hubspot/blog_comments", label="Blog Comments" %}
           </div>
