Update header to use flexbox

--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -4,17 +4,16 @@
 -->
 <header class="header">
   <div class="header__container">
-    <div class="row-fluid span12">
-        <div class="header__logo column span3">
-            {% module "header_logo" path="@hubspot/logo", label="Logo" %}
+    <div class="header__logo">
+        {% module "header_logo" path="@hubspot/logo", label="Logo" %}
+    </div>
+    <div class="header__menu">
+        <input type="checkbox" id="nav-toggle">
+        <label class="header__navigation-toggle" for="nav-toggle"></label>
+        <div class="header__navigation">
+          {% module "header_navigation_primary" path="../../modules/Menu section", label="Primary Navigation" %}
         </div>
-        <div class="header__menu column span9">
-            <input type="checkbox" id="nav-toggle">
-            <label class="header__navigation-toggle" for="nav-toggle"></label>
-            <div class="header__navigation">
-              {% module "header_navigation_primary" path="../../modules/Menu section", label="Primary Navigation" %}
-            </div>
-        </div>
+    </div>
     </div>
   </div>
 </header>
